--- a/wind_rag_webapp/wind_rag_webapp/backend/static/index.html
+++ b/wind_rag_webapp/wind_rag_webapp/backend/static/index.html
@@ -5,8 +5,6 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Wind Turbine Inspection Assistant</title>
   <style>
-    @import url("https://fonts.googleapis.com/css2?family=Source+Sans+3:wght@400;500;600&family=Space+Grotesk:wght@500;600;700&display=swap");
-
     :root {
       --bg: #0c131c;
       --panel: #0f1a26;
@@ -20,8 +18,8 @@
       --shadow: 0 12px 40px rgba(0,0,0,.35);
       --radius: 16px;
       --mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
-      --sans: "Source Sans 3", "Segoe UI", sans-serif;
-      --display: "Space Grotesk", "Segoe UI", sans-serif;
+      --sans: "Trebuchet MS", "Segoe UI", sans-serif;
+      --display: "Trebuchet MS", "Segoe UI", sans-serif;
     }
     * { box-sizing: border-box; }
     html, body { height: 100%; }
@@ -54,48 +52,20 @@
       align-items: center;
       gap: 14px;
     }
-    .logo {
-      width: 52px;
-      height: 52px;
-      object-fit: contain;
-      border-radius: 6px;
-      border: 1px solid var(--border);
-      background: rgba(255,255,255,.04);
-      padding: 3px;
-    }
     .logo-wrap {
       position: relative;
       display: inline-flex;
       align-items: center;
       justify-content: center;
     }
-    .logo-orbit {
-      position: absolute;
-      width: 70px;
-      height: 70px;
-      border-radius: 999px;
-      border: 1px dashed rgba(34,197,94,.6);
-      opacity: 0;
-      pointer-events: none;
-    }
-    .logo-orbit::after {
-      content: "";
-      position: absolute;
-      width: 6px;
-      height: 6px;
-      border-radius: 999px;
-      background: var(--accent-2);
-      top: -3px;
-      left: 50%;
-      transform: translateX(-50%);
-      box-shadow: 0 0 10px rgba(56,189,248,.6);
-    }
-    body.is-running .logo {
-      animation: spin 2.4s linear infinite;
-    }
-    body.is-running .logo-orbit {
-      opacity: .9;
-      animation: spin 1.2s linear infinite;
+    .logo {
+      width: 58px;
+      height: 58px;
+      object-fit: contain;
+      border-radius: 12px;
+      border: 1px solid var(--border);
+      background: rgba(255,255,255,.04);
+      padding: 6px;
     }
     .title h1 {
       margin: 0;
@@ -324,7 +294,6 @@
       <div class="title">
         <span class="logo-wrap">
           <img class="logo" src="/static/logo.png" alt="Project logo" />
-          <span class="logo-orbit" aria-hidden="true"></span>
         </span>
         <div>
           <h1>Wind Turbine Inspection Assistant</h1>
@@ -438,12 +407,14 @@
 
   function el(id){ return document.getElementById(id); }
 
+
   function setStatus(text){
     el('statusPill').textContent = text;
   }
 
   function setRunning(isRunning){
-    document.body.classList.toggle('is-running', !!isRunning);
+    document.body.classList.toggle("is-running", !!isRunning);
+    document.body.setAttribute("aria-busy", isRunning ? "true" : "false");
   }
 
   function showWarn(msg){
@@ -631,7 +602,11 @@
 
       addChatMessage('user', 'Incident input', escapeHtml(userSummary || '(empty)'));
 
-      placeholder = addChatMessage('assistant', 'Recommendation', '<span class="spinner"></span> thinking...');
+      placeholder = addChatMessage(
+        "assistant",
+        "Recommendation",
+        "<span class=\"spinner\"></span> thinking..."
+      );
 
       const resp = await fetch('/api/run', {
         method: 'POST',
