--- a/wind_rag_webapp/wind_rag_webapp/backend/static/index.html
+++ b/wind_rag_webapp/wind_rag_webapp/backend/static/index.html
@@ -185,6 +185,9 @@
       padding: 10px;
       background: rgba(0,0,0,.18);
     }
+    .file-item.is-ignored {
+      opacity: .5;
+    }
     .file-head { display: flex; align-items: center; justify-content: space-between; gap: 10px; }
     .file-name { font-family: var(--mono); font-size: 12px; color: var(--text); overflow: hidden; text-overflow: ellipsis; white-space: nowrap; }
     .btn-mini {
@@ -219,6 +222,14 @@
       opacity: .55;
       cursor: not-allowed;
     }
+    .btn-row {
+      display: flex;
+      gap: 10px;
+      flex-wrap: wrap;
+    }
+    .btn-row .btn {
+      width: auto;
+    }
 
     /* Chat area */
     .chat {
@@ -252,6 +263,23 @@
       line-height: 1.5;
     }
     .mono { font-family: var(--mono); }
+    .chat-image {
+      display: grid;
+      gap: 8px;
+    }
+    .chat-image img {
+      width: 100%;
+      max-height: 360px;
+      object-fit: contain;
+      border-radius: 12px;
+      border: 1px solid var(--border);
+      background: #0b1118;
+    }
+    .chat-image .caption {
+      font-size: 12px;
+      color: var(--muted);
+      word-break: break-all;
+    }
 
     .spinner {
       display: inline-block;
@@ -261,6 +289,61 @@
       border-radius: 999px;
       animation: spin 1s linear infinite;
       vertical-align: -2px;
+    }
+    .processing-hint {
+      display: none;
+      align-items: center;
+      gap: 8px;
+      padding: 10px 12px;
+      margin-bottom: 12px;
+      border-radius: 12px;
+      border: 1px solid var(--border);
+      background: rgba(34,197,94,.10);
+      color: var(--text);
+      font-size: 13px;
+    }
+    body.is-running .processing-hint {
+      display: flex;
+    }
+    .image-review {
+      display: grid;
+      gap: 12px;
+    }
+    .image-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 12px;
+    }
+    .image-card {
+      border: 1px solid var(--border);
+      border-radius: 12px;
+      background: rgba(0,0,0,.18);
+      overflow: hidden;
+    }
+    .image-card.is-ignored {
+      opacity: .5;
+    }
+    .image-preview {
+      width: 100%;
+      height: 160px;
+      object-fit: cover;
+      display: block;
+      background: #0b1118;
+    }
+    .image-meta {
+      padding: 10px;
+      display: grid;
+      gap: 8px;
+    }
+    .image-name {
+      font-size: 12px;
+      color: var(--muted);
+      word-break: break-all;
+    }
+    .image-actions {
+      display: flex;
+      gap: 8px;
+      align-items: center;
     }
     @keyframes spin { to { transform: rotate(360deg); } }
 
@@ -320,9 +403,6 @@
             <input id="fileInput" type="file" accept="image/*" multiple style="display:none" />
           </div>
 
-          <div class="chips" id="sampleChips"></div>
-          <div class="file-list" id="fileList"></div>
-
           <label>SCADA window (pick a prepared time range)</label>
           <select id="scadaSelect"></select>
           <div class="small" id="scadaPreview" style="margin-top:6px;"></div>
@@ -346,15 +426,18 @@
           <div class="small" style="margin-top:10px;">
             Tip: Retrieval is biased toward procedures, checklists, and safety content.
           </div>
-          <div class="warn" id="warnBox" style="margin-top:10px; display:none;"></div>
         </div>
       </div>
 
       <!-- OUTPUTS -->
       <div class="card">
-        <div class="card-h"><h2>Conversation</h2><span class="pill" id="modelPill">model: auto</span></div>
-        <div class="card-b">
-          <div class="chat" id="chat"></div>
+      <div class="card-h"><h2>Conversation</h2><span class="pill" id="modelPill">model: auto</span></div>
+      <div class="card-b">
+        <div class="processing-hint" id="processingHint" aria-live="polite">
+          <span class="spinner"></span>
+          Processing request…
+        </div>
+        <div class="chat" id="chat"></div>
 
           <div style="height: 14px;"></div>
 
@@ -393,10 +476,11 @@
 
 <script>
   const state = {
-    files: [], // {name, desc, data_url}
+    files: [], // {name, desc, data_url, use}
     scadaOptions: [],
     lastResults: [],
     awaitingConfirm: false,
+    reviewMessage: null,
   };
 
   const sampleImageDescriptions = [
@@ -419,6 +503,9 @@
 
   function showWarn(msg){
     const box = el('warnBox');
+    if (!box) {
+      return;
+    }
     box.style.display = msg ? 'block' : 'none';
     box.textContent = msg || '';
   }
@@ -435,15 +522,31 @@
     return wrap;
   }
 
+  function addChatImage(item){
+    if (!item || !item.data_url) {
+      return;
+    }
+    const body = `
+      <div class="chat-image">
+        <img src="${item.data_url}" alt="${escapeHtml(item.name || "uploaded image")}" />
+        <div class="caption">${escapeHtml(item.name || "uploaded image")}</div>
+      </div>
+    `;
+    addChatMessage("user", "Uploaded image", body);
+  }
+
   function renderSampleChips(){
     const c = el('sampleChips');
+    if (!c) {
+      return;
+    }
     c.innerHTML = '';
     sampleImageDescriptions.forEach((desc) => {
       const chip = document.createElement('div');
       chip.className = 'chip';
       chip.textContent = `+ ${desc}`;
       chip.onclick = () => {
-        state.files.push({ name: 'sample-image', desc });
+        state.files.push({ name: 'sample-image', desc, use: true });
         renderFileList();
       };
       c.appendChild(chip);
@@ -452,6 +555,9 @@
 
   function renderFileList(){
     const list = el('fileList');
+    if (!list) {
+      return;
+    }
     list.innerHTML = '';
 
     if(state.files.length === 0){
@@ -464,7 +570,7 @@
 
     state.files.forEach((f, idx) => {
       const item = document.createElement('div');
-      item.className = 'file-item';
+      item.className = `file-item${f.use === false ? ' is-ignored' : ''}`;
       item.innerHTML = `
         <div class="file-head">
           <div class="file-name">${f.name || 'image'}</div>
@@ -480,8 +586,128 @@
       item.querySelector('input').oninput = (e) => {
         state.files[idx].desc = e.target.value;
       };
+      if (f.use === false) {
+        item.querySelector('input').disabled = true;
+      }
       list.appendChild(item);
     });
+  }
+
+  function renderImageReview(){
+    if (state.reviewMessage) {
+      state.reviewMessage.remove();
+      state.reviewMessage = null;
+    }
+
+    const wrap = addChatMessage("assistant", "Image Review", "");
+    state.reviewMessage = wrap;
+    const body = wrap.querySelector(".m-b");
+    if (!body) {
+      return;
+    }
+    body.innerHTML = "";
+
+    const review = document.createElement("div");
+    review.className = "image-review";
+
+    const grid = document.createElement("div");
+    grid.className = "image-grid";
+
+    state.files.forEach((f, idx) => {
+      if (!f.data_url) {
+        return;
+      }
+      if (typeof f.use === "undefined") {
+        f.use = true;
+      }
+
+      const card = document.createElement("div");
+      card.className = `image-card${f.use === false ? " is-ignored" : ""}`;
+
+      const img = document.createElement("img");
+      img.className = "image-preview";
+      img.src = f.data_url;
+      img.alt = f.name || "uploaded image";
+
+      const meta = document.createElement("div");
+      meta.className = "image-meta";
+
+      const name = document.createElement("div");
+      name.className = "image-name";
+      name.textContent = f.name || "uploaded image";
+
+      const label = document.createElement("label");
+      label.textContent = "Description";
+
+      const textarea = document.createElement("textarea");
+      textarea.value = f.desc || "";
+      textarea.disabled = f.use === false;
+      textarea.oninput = (e) => {
+        state.files[idx].desc = e.target.value;
+      };
+
+      const actions = document.createElement("div");
+      actions.className = "image-actions";
+
+      const toggle = document.createElement("button");
+      toggle.className = "btn-mini";
+      toggle.textContent = f.use === false ? "Use" : "Ignore";
+      toggle.onclick = () => {
+        f.use = f.use === false ? true : false;
+        card.classList.toggle("is-ignored", f.use === false);
+        toggle.textContent = f.use === false ? "Use" : "Ignore";
+        textarea.disabled = f.use === false;
+        renderFileList();
+      };
+
+      actions.appendChild(toggle);
+      meta.appendChild(name);
+      meta.appendChild(label);
+      meta.appendChild(textarea);
+      meta.appendChild(actions);
+      card.appendChild(img);
+      card.appendChild(meta);
+      grid.appendChild(card);
+    });
+
+    review.appendChild(grid);
+
+    const actionRow = document.createElement("div");
+    actionRow.className = "btn-row";
+
+    const confirmBtn = document.createElement("button");
+    confirmBtn.className = "btn";
+    confirmBtn.textContent = "Confirm & Run";
+    confirmBtn.onclick = () => {
+      if (state.reviewMessage) {
+        state.reviewMessage.remove();
+        state.reviewMessage = null;
+      }
+      run();
+    };
+
+    const rejectBtn = document.createElement("button");
+    rejectBtn.className = "btn-mini";
+    rejectBtn.textContent = "Reject Images";
+    rejectBtn.onclick = () => {
+      state.files.forEach((f) => {
+        if (f.data_url) {
+          f.use = false;
+          f.desc = "";
+        }
+      });
+      renderFileList();
+      if (state.reviewMessage) {
+        state.reviewMessage.remove();
+        state.reviewMessage = null;
+      }
+      run();
+    };
+
+    actionRow.appendChild(confirmBtn);
+    actionRow.appendChild(rejectBtn);
+    review.appendChild(actionRow);
+    body.appendChild(review);
   }
 
   function escapeHtml(str){
@@ -491,6 +717,24 @@
       .replaceAll('>', '&gt;')
       .replaceAll('"', '&quot;')
       .replaceAll("'", '&#039;');
+  }
+
+  function normalizeDescription(text){
+    const raw = (text || "").trim();
+    if (!raw) {
+      return "";
+    }
+    if (raw.startsWith("{") && raw.endsWith("}")) {
+      try {
+        const obj = JSON.parse(raw);
+        if (obj && typeof obj.description === "string") {
+          return obj.description.trim();
+        }
+      } catch (e) {
+        return raw;
+      }
+    }
+    return raw;
   }
 
   async function loadScadaOptions(){
@@ -554,11 +798,14 @@
     const topK = Math.max(3, Math.min(30, parseInt(el('topK').value || '10', 10)));
 
     const imageDescriptions = state.files
+      .filter(f => f.use !== false)
       .map(f => (f.desc || '').trim())
       .filter(Boolean);
 
-    const imageFiles = state.files
-      .filter(f => !!f.data_url)
+    const imageTargets = state.files
+      .filter(f => f.use !== false && !!f.data_url);
+
+    const imageFiles = imageTargets
       .map(f => ({ name: f.name || 'image', data_url: f.data_url }));
 
     let placeholder = null;
@@ -574,17 +821,23 @@
           throw new Error(data?.detail || 'Faulty description failed');
         }
         const descs = data.descriptions || [];
-        state.files.forEach((f, idx) => {
+        imageTargets.forEach((f, idx) => {
           const d = descs[idx];
           if (d && d.description) {
-            f.desc = d.description;
+            f.desc = normalizeDescription(d.description);
+          }
+          if (typeof f.use === "undefined") {
+            f.use = true;
           }
         });
         state.awaitingConfirm = true;
         el('runBtn').textContent = 'Confirm & Run';
         renderFileList();
-        showWarn('Bitte die Bildbeschreibungen prüfen und Run erneut klicken.');
+        renderImageReview();
+        showWarn('Bitte die Bildbeschreibungen pruefen und bestaetigen.');
         setStatus('confirm');
+        setRunning(false);
+        el('runBtn').disabled = false;
         return;
       }
 
@@ -657,12 +910,13 @@
 
     function handleFiles(fileList){
       [...fileList].forEach(f => {
-        const item = { name: f.name, desc: '', data_url: '' };
+        const item = { name: f.name, desc: '', data_url: '', use: true };
         state.files.push(item);
         const reader = new FileReader();
         reader.onload = () => {
           item.data_url = reader.result || '';
           renderFileList();
+          addChatImage(item);
         };
         reader.readAsDataURL(f);
       });
